removed .html suffixes from url

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 
 	<body>
 		<nav class="navbar navbar-expand-md navbar-dark bg-dark site-navbar">
-			<a class="navbar-brand" href="index.html">
+			<a class="navbar-brand" href="index">
 				<img src="assets/webdev-logo.png" width="30" height="30" class="d-inline-block align-top" alt=""> WebDevGuide
 			</a>
 
@@ -26,24 +26,24 @@
 
 			<div class="collapse navbar-collapse" id="navbar-collapse">
 				<div class="navbar-nav nav-fill w-100">
-					<a class="nav-item nav-link active" href="index.html"> Index
+					<a class="nav-item nav-link active" href="index"> Index
 						<span class="sr-only"> (Current Page) </span>
 					</a>
-					<a class="nav-item nav-link" href="intro.html"> Getting Started </a>
-					<a class="nav-item nav-link" href="lessons.html"> Lessons </a>
-					<a class="nav-item nav-link" href="resources.html"> Resources </a>
+					<a class="nav-item nav-link" href="intro"> Getting Started </a>
+					<a class="nav-item nav-link" href="lessons"> Lessons </a>
+					<a class="nav-item nav-link" href="resources"> Resources </a>
 				</div>
 			</div>
 		</nav>
 
 		<h1 class="display-1 text-center pt-5" id="title">Welcome!</h1>
 
-		<h4 class="text-center py-5 px-5 display-4" id="subtitle">This is a website created by <a href="https://thebitspud.github.io/" target="_blank">thebitspud</a> (James Zhong) that is dedicated to teaching you and many others the basics of web development. </h4>
+		<h4 class="text-center py-5 px-5 display-4" id="subtitle">This is a website created by <a href="https://thebitspud.github.io/" target="_blank">Thebitspud</a> (James Zhong) that is dedicated to teaching you and many others the basics of web development. </h4>
 
 		<div id="side-group">
-			<a href="intro.html" class="btn btn-success btn-lg btn-block text-center">Get Started</a>
-			<a href="lessons.html" class="btn btn-secondary btn-lg btn-block text-center">View Lessons</a>
-			<a href="resources.html" class="btn btn-primary btn-lg btn-block text-center mb-5">View Reference Guides and Other Resources</a>
+			<a href="intro" class="btn btn-success btn-lg btn-block text-center">Get Started</a>
+			<a href="lessons" class="btn btn-secondary btn-lg btn-block text-center">View Lessons</a>
+			<a href="resources" class="btn btn-primary btn-lg btn-block text-center mb-5">View Reference Guides and Other Resources</a>
 		</div>
 
 		<hr>
