--- a/lessons.html
+++ b/lessons.html
@@ -16,7 +16,7 @@
 
 	<body>
 		<nav class="navbar navbar-expand-md navbar-dark bg-dark site-navbar">
-			<a class="navbar-brand" href="index.html">
+			<a class="navbar-brand" href="index">
 				<img src="assets/webdev-logo.png" width="30" height="30" class="d-inline-block align-top" alt=""> WebDevGuide
 			</a>
 
@@ -26,12 +26,12 @@
 
 			<div class="collapse navbar-collapse" id="navbar-collapse">
 				<div class="navbar-nav nav-fill w-100">
-					<a class="nav-item nav-link" href="index.html"> Index </a>
-					<a class="nav-item nav-link" href="intro.html"> Getting Started </a>
-					<a class="nav-item nav-link active" href="lessons.html"> Lessons
+					<a class="nav-item nav-link" href="index"> Index </a>
+					<a class="nav-item nav-link" href="intro"> Getting Started </a>
+					<a class="nav-item nav-link active" href="lessons"> Lessons
 						<span class="sr-only"> (Current Page) </span>
 					</a>
-					<a class="nav-item nav-link" href="resources.html"> Resources </a>
+					<a class="nav-item nav-link" href="resources"> Resources </a>
 				</div>
 			</div>
 		</nav>
@@ -43,25 +43,25 @@
 		<div class="container-fluid px-5">
 			<div class="row">
 				<div class="col-lg-4">
-					<h3 class="mt-5"><a href="lessons/01.html" class="footer-link-grey">Lesson 1: Intro to HTML</a></h3>
+					<h3 class="mt-5"><a href="lessons/01" class="footer-link-grey">Lesson 1: Intro to HTML</a></h3>
 				</div>
 
 				<div class="col-lg-4">
-					<h3 class="mt-5"><a href="lessons/02.html" class="footer-link-grey">Lesson 2: Using HTML Tags</a></h5>
+					<h3 class="mt-5"><a href="lessons/02" class="footer-link-grey">Lesson 2: Using HTML Tags</a></h5>
 				</div>
 
 				<div class="col-lg-4">
-					<h3 class="mt-5"><a href="lessons/03.html" class="footer-link-grey">Lesson 3: Text Alteration and Media</a></h3>
+					<h3 class="mt-5"><a href="lessons/03" class="footer-link-grey">Lesson 3: Text Alteration and Media</a></h3>
 				</div>
 			</div>
 
 			<div class="row">
 				<div class="col-lg-4">
-					<h3 class="mt-5"> <a href="lessons/04.html" class="footer-link-grey">Lesson 4: Quotations and Tables</a></h3>
+					<h3 class="mt-5"> <a href="lessons/04" class="footer-link-grey">Lesson 4: Quotations and Tables</a></h3>
 				</div>
 
 				<div class="col-lg-4">
-					<h3 class="mt-5"> <a href="lessons/05.html" class="footer-link-grey">Lesson 5: Styling and Attributes</a></h3>
+					<h3 class="mt-5"> <a href="lessons/05" class="footer-link-grey">Lesson 5: Styling and Attributes</a></h3>
 				</div>
 			</div>
 		</div>
@@ -71,7 +71,7 @@
 		<div class="container-fluid px-5">
 			<div class="row">
 				<div class="col-lg-4">
-					<h3 class="mt-5"><a href="lessons/06.html" class="footer-link-grey">Lesson 6: Intro to CSS</a></h3>
+					<h3 class="mt-5"><a href="lessons/06" class="footer-link-grey">Lesson 6: Intro to CSS</a></h3>
 				</div>
 			</div>
 		</div>
@@ -95,4 +95,4 @@
 		integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy"
 		crossorigin="anonymous"></script>
 	</body>
-</html>
+<>
