--- a/intro.html
+++ b/intro.html
@@ -15,7 +15,7 @@
 
 	<body>
 		<nav class="navbar navbar-expand-md navbar-dark bg-dark site-navbar">
-			<a class="navbar-brand" href="index.html">
+			<a class="navbar-brand" href="index">
 				<img src="assets/webdev-logo.png" width="30" height="30" class="d-inline-block align-top" alt=""> WebDevGuide
 			</a>
 
@@ -25,12 +25,12 @@
 
 			<div class="collapse navbar-collapse" id="navbar-collapse">
 				<div class="navbar-nav nav-fill w-100">
-					<a class="nav-item nav-link" href="index.html"> Index </a>
-					<a class="nav-item nav-link active" href="intro.html"> Getting Started
+					<a class="nav-item nav-link" href="index"> Index </a>
+					<a class="nav-item nav-link active" href="intro"> Getting Started
 						<span class="sr-only"> (Current Page) </span>
 					</a>
-					<a class="nav-item nav-link" href="lessons.html"> Lessons </a>
-					<a class="nav-item nav-link" href="resources.html"> Resources </a>
+					<a class="nav-item nav-link" href="lessons"> Lessons </a>
+					<a class="nav-item nav-link" href="resources"> Resources </a>
 				</div>
 			</div>
 		</nav>
@@ -46,7 +46,7 @@
 			<br>
 			<br>Alternatively, you can jump right in and begin learning by clicking the link below.
 			<br>
-			<br><a href="lessons.html" class="footer-link-blue">HTML Lessons</a>
+			<br><a href="lessons" class="footer-link-blue" Lessons</a>
 		</h5>
 
 		<hr>
