--- a/lessons/01.html
+++ b/lessons/01.html
@@ -15,7 +15,7 @@
 
 	<body>
 		<nav class="navbar navbar-expand-md navbar-dark bg-dark site-navbar">
-			<a class="navbar-brand" href="index.html">
+			<a class="navbar-brand" href="index">
 				<img src="../assets/webdev-logo.png" width="30" height="30" class="d-inline-block align-top" alt=""> WebDevGuide
 			</a>
 
@@ -25,12 +25,12 @@
 
 			<div class="collapse navbar-collapse" id="navbar-collapse">
 				<div class="navbar-nav nav-fill w-100">
-					<a class="nav-item nav-link" href="../index.html"> Index </a>
-					<a class="nav-item nav-link" href="../intro.html"> Getting Started </a>
-					<a class="nav-item nav-link active" href="../lessons.html"> Lessons
+					<a class="nav-item nav-link" href="../index"> Index </a>
+					<a class="nav-item nav-link" href="../intro"> Getting Started </a>
+					<a class="nav-item nav-link active" href="../lessons"> Lessons
 						<span class="sr-only"> (Current Page) </span>
 					</a>
-					<a class="nav-item nav-link" href="../resources.html"> Resources </a>
+					<a class="nav-item nav-link" href="../resources"> Resources </a>
 				</div>
 			</div>
 		</nav>
@@ -51,7 +51,7 @@
 					</div>
 
 					<div class="col-lg-6 text-right">
-						<a href="02.html" class="footer-link-grey">Lesson 2 &#8594;</a>
+						<a href="02" class="footer-link-grey">Lesson 2 &#8594;</a>
 					</div>
 				</div>
 			</div>
