--- a/resources.html
+++ b/resources.html
@@ -16,7 +16,7 @@
 
 	<body>
 		<nav class = "navbar navbar-expand-md navbar-dark bg-dark site-navbar">
-			<a class = "navbar-brand" href = "index.html">
+			<a class = "navbar-brand" href = "index">
 				<img src = "assets/webdev-logo.png" width = "30" height = "30" class = "d-inline-block align-top" alt = ""> WebDevGuide
 			</a>
 
@@ -26,10 +26,10 @@
 
 			<div class = "collapse navbar-collapse" id = "navbar-collapse">
 				<div class = "navbar-nav nav-fill w-100">
-					<a class = "nav-item nav-link" href = "index.html"> Index </a>
-					<a class = "nav-item nav-link" href = "intro.html"> Getting Started </a>
-					<a class = "nav-item nav-link" href = "lessons.html"> Lessons </a>
-					<a class = "nav-item nav-link active" href = "resources.html"> Resources
+					<a class = "nav-item nav-link" href = "index"> Index </a>
+					<a class = "nav-item nav-link" href = "intro"> Getting Started </a>
+					<a class = "nav-item nav-link" href = "lessons"> Lessons </a>
+					<a class = "nav-item nav-link active" href = "resources"> Resources
 						<span class = "sr-only"> (Current Page) </span>
 					</a>
 				</div>
