--- a/intro.html
+++ b/intro.html
@@ -46,7 +46,7 @@
 			<br>
 			<br>Alternatively, you can jump right in and begin learning by clicking the link below.
 			<br>
-			<br><a href="lessons" class="footer-link-blue" Lessons</a>
+			<br><a href="lessons" class="footer-link-blue">Lessons</a>
 		</h5>
 
 		<hr>
